[refactor] Refactoring file upload and popup_image table S11P12A806-322